// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reef Detail Page should render with given state from Redux store: snapshot-with-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-80"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-82"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-link
          href="/"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          HOME
        </mock-link>
        <mock-link
          href="/buoy"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          BUOY
        </mock-link>
        <mock-link
          href="/drones"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          DRONE
        </mock-link>
        <mock-link
          href="/about"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          ABOUT
        </mock-link>
        <mock-link
          href="/faq"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          FAQ
        </mock-link>
        <mock-link
          href="/apply"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          APPLY
        </mock-link>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-typography
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-8"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              SIGN IN
            </mock-button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              REGISTER
            </mock-button>
          </div>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
<<<<<<< HEAD
        class="MuiCardHeader-root RegisterDialog-dialogHeader-106"
=======
        class="MuiCardHeader-root RegisterDialog-dialogHeader-90"
>>>>>>> b66f944... Fix safari bugs on surveys
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="RegisterDialog-dialogHeaderSecondPart-107"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
<<<<<<< HEAD
                    classname="RegisterDialog-closeButton-105"
=======
                    classname="RegisterDialog-closeButton-89"
>>>>>>> b66f944... Fix safari bugs on surveys
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent
        classname="RegisterDialog-contentWrapper-114"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root RegisterDialog-dialogContentTitle-108 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
<<<<<<< HEAD
              class="RegisterDialog-form-109"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-110 MuiGrid-item MuiGrid-grid-xs-12"
=======
              class="RegisterDialog-registerForm-91"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-92 MuiGrid-item MuiGrid-grid-xs-12"
>>>>>>> b66f944... Fix safari bugs on surveys
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
<<<<<<< HEAD
                class="MuiGrid-root RegisterDialog-textFieldWrapper-110 MuiGrid-item MuiGrid-grid-xs-12"
=======
                class="MuiGrid-root RegisterDialog-textFieldWrapper-92 MuiGrid-item MuiGrid-grid-xs-12"
>>>>>>> b66f944... Fix safari bugs on surveys
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
<<<<<<< HEAD
                class="MuiGrid-root RegisterDialog-textFieldWrapper-110 MuiGrid-item MuiGrid-grid-xs-12"
=======
                class="MuiGrid-root RegisterDialog-textFieldWrapper-92 MuiGrid-item MuiGrid-grid-xs-12"
>>>>>>> b66f944... Fix safari bugs on surveys
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
<<<<<<< HEAD
                class="MuiGrid-root RegisterDialog-textFieldWrapper-110 MuiGrid-item MuiGrid-grid-xs-12"
=======
                class="MuiGrid-root RegisterDialog-textFieldWrapper-92 MuiGrid-item MuiGrid-grid-xs-12"
>>>>>>> b66f944... Fix safari bugs on surveys
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-around MuiGrid-grid-xs-11"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
<<<<<<< HEAD
                    classname="RegisterDialog-termsCheckbox-115"
=======
                    classname="RegisterDialog-termsCheckbox-94"
>>>>>>> b66f944... Fix safari bugs on surveys
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <mock-typography
<<<<<<< HEAD
                    classname="RegisterDialog-formText-112"
=======
                    classname="RegisterDialog-termsText-95"
>>>>>>> b66f944... Fix safari bugs on surveys
                    color="textSecondary"
                    variant="subtitle1"
                  >
                    I have read the
                     
                    <a
                      class="RegisterDialog-termsLink-116"
                      href="/"
                    >
                      Terms and Conditions
                    </a>
                  </mock-typography>
                </div>
              </div>
              <div
<<<<<<< HEAD
                class="MuiGrid-root RegisterDialog-button-113 MuiGrid-item MuiGrid-grid-xs-12"
=======
                class="MuiGrid-root RegisterDialog-button-96 MuiGrid-item MuiGrid-grid-xs-12"
>>>>>>> b66f944... Fix safari bugs on surveys
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  REGISTER NOW
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
<<<<<<< HEAD
                  classname="RegisterDialog-formText-112"
=======
                  classname="RegisterDialog-termsText-95"
>>>>>>> b66f944... Fix safari bugs on surveys
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
<<<<<<< HEAD
        class="MuiCardHeader-root SignInDialog-dialogHeader-118"
=======
        class="MuiCardHeader-root SignInDialog-dialogHeader-98"
>>>>>>> b66f944... Fix safari bugs on surveys
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="SignInDialog-dialogHeaderSecondPart-119"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
<<<<<<< HEAD
                    classname="SignInDialog-closeButton-117"
=======
                    classname="SignInDialog-closeButton-97"
>>>>>>> b66f944... Fix safari bugs on surveys
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root SignInDialog-dialogContentTitle-120 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
<<<<<<< HEAD
              class="SignInDialog-form-121"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-122 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-124"
=======
              class="SignInDialog-signInForm-99"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-100 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-102"
>>>>>>> b66f944... Fix safari bugs on surveys
                  variant="subtitle2"
                >
                  or login with email address
                </mock-typography>
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
<<<<<<< HEAD
                class="MuiGrid-root SignInDialog-textFieldWrapper-122 MuiGrid-item MuiGrid-grid-xs-12"
=======
                class="MuiGrid-root SignInDialog-textFieldWrapper-100 MuiGrid-item MuiGrid-grid-xs-12"
>>>>>>> b66f944... Fix safari bugs on surveys
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  classname="SignInDialog-forgotPasswordButton-126"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
<<<<<<< HEAD
                class="MuiGrid-root SignInDialog-button-125 MuiGrid-item MuiGrid-grid-xs-12"
=======
                class="MuiGrid-root SignInDialog-button-103 MuiGrid-item MuiGrid-grid-xs-12"
>>>>>>> b66f944... Fix safari bugs on surveys
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
<<<<<<< HEAD
                  classname="SignInDialog-formText-124"
=======
                  classname="SignInDialog-formText-102"
>>>>>>> b66f944... Fix safari bugs on surveys
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    REGISTER
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiGrid-root ReefNavBar-root-127 MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
  >
    <div
      class="MuiGrid-root ReefNavBar-root-105 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-iconbutton
              aria-label="menu"
              color="primary"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </mock-iconbutton>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-9"
          >
            
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                variant="subtitle1"
              >
                Latest data: May 20, 2020
              </mock-typography>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5"
      />
    </div>
    <mock-box
      mt="2rem"
    >
      <mock-box
        ml="2rem"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-baseline"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              variant="h6"
            >
              LOCATION:
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              variant="subtitle2"
            >
              LAT: 
              0
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              variant="subtitle2"
            >
              LONG: 
              0
            </mock-typography>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5"
    />
  </div>
  <div
    class="MuiGrid-root ReefDetails-root-129 MuiGrid-container MuiGrid-justify-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-baseline MuiGrid-grid-xs-11"
    >
      <mock-typography
        classname="ReefDetails-cardTitles-130"
        style="margin-left: 2rem;"
        variant="h6"
      >
        LOCATION:
      </mock-typography>
      <mock-typography
        classname="ReefDetails-cardTitles-130"
        variant="subtitle2"
      >
        LAT: 
        0
      </mock-typography>
      <mock-typography
        classname="ReefDetails-cardTitles-130"
        variant="subtitle2"
      >
        LONG: 
        0
      </mock-typography>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-11"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-justify-xs-space-between"
      >
        <div
          class="ReefDetails-container-131"
        >
          <div
            class="ReefDetails-container-108"
          >
            <mock-map
              polygon="[object Object]"
            />
          </div>
        </div>
        <div
          class="ReefDetails-container-131"
        >
<<<<<<< HEAD
          <mock-featuredmedia />
=======
          <div
            class="ReefDetails-container-108"
          >
            <mock-featurevideo />
          </div>
>>>>>>> b66f944... Fix safari bugs on surveys
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-justify-xs-space-between"
      >
        <div
          class="ReefDetails-smallContainer-132"
        >
          <mock-card
<<<<<<< HEAD
            classname="Satellite-card-138"
            style="background-color: rgb(8, 91, 163);"
          >
            <div
              class="MuiCardHeader-root Satellite-header-140"
=======
            classname="Satellite-card-114"
            style="background-color: rgb(8, 91, 163);"
          >
            <div
              class="MuiCardHeader-root Satellite-header-116"
>>>>>>> b66f944... Fix safari bugs on surveys
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-8"
                    >
                      <mock-typography
<<<<<<< HEAD
                        classname="Satellite-cardTitle-133"
=======
                        classname="Satellite-cardTitle-109"
>>>>>>> b66f944... Fix safari bugs on surveys
                        variant="h6"
                      >
                        SATELLITE OBSERVATION
                      </mock-typography>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                    >
                      <img
                        alt="satellite"
<<<<<<< HEAD
                        class="Satellite-titleImage-139"
=======
                        class="Satellite-titleImage-115"
>>>>>>> b66f944... Fix safari bugs on surveys
                        src="satellite.svg"
                      />
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
<<<<<<< HEAD
              classname="Satellite-content-141"
=======
              classname="Satellite-content-117"
>>>>>>> b66f944... Fix safari bugs on surveys
            >
              <mock-box
                p="1rem 1rem 1rem 2rem"
              >
                <div
                  class="MuiGrid-root Satellite-contentTextWrapper-142 MuiGrid-container MuiGrid-item MuiGrid-align-content-xs-flex-start MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root Satellite-contentMeasure-137 MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 MuiGrid-grid-lg-12 MuiGrid-grid-xl-6"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-134"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      SURFACE TEMP
                    </mock-typography>
                    <mock-typography
                      classname="Satellite-contentTextValues-135"
                      color="textPrimary"
                    >
                      26.0 °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root Satellite-contentMeasure-137 MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 MuiGrid-grid-lg-12 MuiGrid-grid-xl-6"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-134"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      HISTORICAL MAX TEMP
                    </mock-typography>
                    <mock-typography
                      classname="Satellite-contentTextValues-135"
                      color="textPrimary"
                    >
                      23.0 °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-134"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      DEGREE HEATING WEEKS
                    </mock-typography>
                    <mock-tooltip
                      title="Degree Heating Weeks - a measure of the amount of time above the 20 year historical maximum temperatures"
                    >
                      <mock-typography
<<<<<<< HEAD
                        classname="Satellite-contentTextValues-135"
                        color="textPrimary"
=======
                        classname="Satellite-contentTextTitles-110"
                        variant="subtitle2"
>>>>>>> b66f944... Fix safari bugs on surveys
                      >
                        SURFACE TEMP
                      </mock-typography>
                      <mock-typography
                        classname="Satellite-contentTextValues-111"
                        variant="h2"
                      >
                        26.0 ℃
                      </mock-typography>
                    </mock-box>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <mock-box
                      pl="1rem"
                    >
                      <mock-typography
                        classname="Satellite-contentTextTitles-110"
                        variant="subtitle2"
                      >
                        HISTORICAL MAX TEMP
                      </mock-typography>
                      <mock-tooltip
                        title="Degree Heating Weeks - a measure of the amount of time above the 20 year historical maximum temperatures"
                      >
                        <mock-typography
                          classname="Satellite-contentTextValues-111"
                          variant="h2"
                        >
                          23.0 °C
                        </mock-typography>
                      </mock-tooltip>
                    </mock-box>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <mock-box
                      pl="1rem"
                    >
                      <mock-typography
                        classname="Satellite-contentTextTitles-110"
                        variant="subtitle2"
                      >
                        HEAT STRESS
                      </mock-typography>
                      <mock-tooltip
                        title="Degree Heating Weeks - a measure of the amount of time above the 20 year historical maximum temperatures"
                      >
                        <mock-typography
                          classname="Satellite-contentTextValues-111"
                          variant="h2"
                        >
                          0.1 DHW
                        </mock-typography>
                      </mock-tooltip>
                    </mock-box>
                  </div>
                </div>
              </mock-box>
              <div
                class="MuiGrid-root MuiGrid-container"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(8, 91, 163); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      0
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(12, 157, 165); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      2
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(117, 180, 114); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      4
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(123, 217, 37); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      6
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(193, 229, 34); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      8
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(229, 187, 43); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      10
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(230, 121, 40); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      12
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(232, 79, 46); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      14
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(216, 69, 36); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      16
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(128, 58, 32); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      18
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(185, 41, 68); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      20
                    </mock-typography>
                  </mock-box>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                  style="background-color: rgb(128, 48, 126); height: 2rem;"
                >
                  <mock-box
                    textalign="center"
                  >
                    <mock-typography
                      align="center"
                      variant="caption"
                    >
                      25
                    </mock-typography>
                  </mock-box>
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="ReefDetails-smallContainer-132"
        >
          <mock-card
<<<<<<< HEAD
            classname="Sensor-card-149"
          >
            <div
              class="MuiCardHeader-root Sensor-header-151"
=======
            classname="Sensor-card-124"
          >
            <div
              class="MuiCardHeader-root Sensor-header-126"
>>>>>>> b66f944... Fix safari bugs on surveys
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
                    >
                      <mock-typography
<<<<<<< HEAD
                        classname="Sensor-cardTitle-144"
=======
                        classname="Sensor-cardTitle-119"
>>>>>>> b66f944... Fix safari bugs on surveys
                        variant="h6"
                      >
                        SENSOR OBSERVATION
                      </mock-typography>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                    >
                      <img
                        alt="buoy"
<<<<<<< HEAD
                        class="Sensor-titleImage-150"
=======
                        class="Sensor-titleImage-125"
>>>>>>> b66f944... Fix safari bugs on surveys
                        src="buoy.svg"
                      />
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
<<<<<<< HEAD
              classname="Sensor-content-152"
=======
              classname="Sensor-content-127"
>>>>>>> b66f944... Fix safari bugs on surveys
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
                style="position: relative;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-7"
                >
                  <div
                    class="MuiGrid-root Sensor-contentMeasure-148 MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Sensor-contentTextTitles-145"
                      color="textPrimary"
                      variant="subtitle2"
                    >
<<<<<<< HEAD
                      SURFACE TEMP
                    </mock-typography>
                    <mock-typography
                      classname="Sensor-contentTextValues-146"
                      color="textPrimary"
                    >
                      25.0
                       °C
                    </mock-typography>
=======
                      <mock-typography
                        classname="Sensor-contentTextTitles-120"
                        variant="subtitle2"
                      >
                        SURFACE TEMP
                      </mock-typography>
                      <mock-typography
                        classname="Sensor-contentTextValues-121"
                        variant="h2"
                      >
                        25.0 °C
                      </mock-typography>
                    </mock-box>
>>>>>>> b66f944... Fix safari bugs on surveys
                  </div>
                  <div
                    class="MuiGrid-root Sensor-contentMeasure-148 MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Sensor-contentTextTitles-145"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      TEMP AT 4M
                    </mock-typography>
                    <mock-typography
                      classname="Sensor-contentTextValues-146"
                      color="textPrimary"
                    >
                      <mock-typography
                        classname="Sensor-contentTextTitles-120"
                        variant="subtitle2"
                      >
                        TEMP AT 4M
                      </mock-typography>
                      <mock-typography
                        classname="Sensor-contentTextValues-121"
                        variant="h2"
                      >
                        25.0 °C
                      </mock-typography>
                    </mock-box>
                  </div>
                </div>
                <mock-box
                  position="absolute"
                  right="0"
                  top="0"
                >
                  <img
                    alt="sensor"
                    class="Sensor-contentImage-153"
                    src="sensor.svg"
                  />
                </mock-box>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="ReefDetails-smallContainer-132"
        >
          <mock-card
<<<<<<< HEAD
            classname="Wind-card-156"
          >
            <div
              class="MuiCardHeader-root Wind-header-157"
=======
            classname="Wind-card-129"
          >
            <div
              class="MuiCardHeader-root Wind-header-130"
>>>>>>> b66f944... Fix safari bugs on surveys
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                    >
                      <mock-typography
                        color="textSecondary"
                        variant="h6"
                      >
                        CORAL BLEACHING ALERT LEVEL
                      </mock-typography>
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
<<<<<<< HEAD
              classname="Wind-contentWrapper-158"
=======
              classname="Wind-contentWrapper-131"
>>>>>>> b66f944... Fix safari bugs on surveys
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
                style="height: 100%;"
              >
                <img
                  alt="alert-level"
                  src="alert_nostress.svg"
                />
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
        <div
          class="ReefDetails-smallContainer-132"
        >
          <mock-card
<<<<<<< HEAD
            classname="Waves-card-164"
          >
            <mock-cardcontent
              classname="Waves-contentWrapper-166"
            >
              <div
                class="MuiGrid-root Waves-content-167 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
=======
            classname="Waves-card-137"
          >
            <mock-cardcontent
              classname="Waves-contentWrapper-139"
            >
              <div
                class="MuiGrid-root Waves-content-140 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
>>>>>>> b66f944... Fix safari bugs on surveys
                style="height: 100%;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <mock-typography
<<<<<<< HEAD
                    classname="Waves-cardTitle-159"
=======
                    classname="Waves-cardTitle-132"
>>>>>>> b66f944... Fix safari bugs on surveys
                    variant="h6"
                  >
                    WIND
                  </mock-typography>
                  <img
                    alt="wind"
<<<<<<< HEAD
                    class="Waves-titleImages-165"
=======
                    class="Waves-titleImages-138"
>>>>>>> b66f944... Fix safari bugs on surveys
                    src="wind.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
<<<<<<< HEAD
                      classname="Waves-contentTextTitles-160"
=======
                      classname="Waves-contentTextTitles-133"
>>>>>>> b66f944... Fix safari bugs on surveys
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      SPEED
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
<<<<<<< HEAD
                        classname="Waves-contentTextValues-161"
=======
                        classname="Waves-contentTextValues-134"
>>>>>>> b66f944... Fix safari bugs on surveys
                        color="textSecondary"
                      >
                        9.0
                      </mock-typography>
                      <mock-typography
<<<<<<< HEAD
                        classname="Waves-contentUnits-162"
=======
                        classname="Waves-contentUnits-135"
>>>>>>> b66f944... Fix safari bugs on surveys
                        color="textSecondary"
                        variant="h6"
                      >
                        KM/H
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
<<<<<<< HEAD
                      classname="Waves-contentTextTitles-160"
=======
                      classname="Waves-contentTextTitles-133"
>>>>>>> b66f944... Fix safari bugs on surveys
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      DIRECTION
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <img
                        alt="arrow"
<<<<<<< HEAD
                        class="Waves-arrow-168"
=======
                        class="Waves-arrow-141"
>>>>>>> b66f944... Fix safari bugs on surveys
                        src="directioncircle.svg"
                        style="transform: rotate(360deg);"
                      />
                      <mock-typography
<<<<<<< HEAD
                        classname="Waves-contentTextValues-161"
=======
                        classname="Waves-contentTextValues-134"
>>>>>>> b66f944... Fix safari bugs on surveys
                        color="textSecondary"
                        variant="h3"
                      >
                        180°
                      </mock-typography>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <mock-typography
<<<<<<< HEAD
                    classname="Waves-cardTitle-159"
=======
                    classname="Waves-cardTitle-132"
>>>>>>> b66f944... Fix safari bugs on surveys
                    variant="h6"
                  >
                    WAVES
                  </mock-typography>
                  <img
                    alt="waves"
<<<<<<< HEAD
                    class="Waves-titleImages-165"
=======
                    class="Waves-titleImages-138"
>>>>>>> b66f944... Fix safari bugs on surveys
                    src="waves.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-4"
                  >
                    <mock-typography
<<<<<<< HEAD
                      classname="Waves-contentTextTitles-160"
=======
                      classname="Waves-contentTextTitles-133"
>>>>>>> b66f944... Fix safari bugs on surveys
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      HEIGHT
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
<<<<<<< HEAD
                        classname="Waves-contentTextValues-161"
=======
                        classname="Waves-contentTextValues-134"
>>>>>>> b66f944... Fix safari bugs on surveys
                        color="textSecondary"
                      >
                        5.0
                      </mock-typography>
                      <mock-typography
<<<<<<< HEAD
                        classname="Waves-contentUnits-162"
=======
                        classname="Waves-contentUnits-135"
>>>>>>> b66f944... Fix safari bugs on surveys
                        color="textSecondary"
                        variant="h6"
                      >
                        Μ
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-3"
                  >
                    <mock-typography
<<<<<<< HEAD
                      classname="Waves-contentTextTitles-160"
=======
                      classname="Waves-contentTextTitles-133"
>>>>>>> b66f944... Fix safari bugs on surveys
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      PERIOD
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
<<<<<<< HEAD
                        classname="Waves-contentTextValues-161"
=======
                        classname="Waves-contentTextValues-134"
>>>>>>> b66f944... Fix safari bugs on surveys
                        color="textSecondary"
                      >
                        2
                      </mock-typography>
                      <mock-typography
<<<<<<< HEAD
                        classname="Waves-contentUnits-162"
=======
                        classname="Waves-contentUnits-135"
>>>>>>> b66f944... Fix safari bugs on surveys
                        color="textSecondary"
                        variant="h6"
                      >
                        S
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-5"
                  >
                    <mock-typography
<<<<<<< HEAD
                      classname="Waves-contentTextTitles-160"
=======
                      classname="Waves-contentTextTitles-133"
>>>>>>> b66f944... Fix safari bugs on surveys
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      DIRECTION
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <img
                        alt="arrow"
<<<<<<< HEAD
                        class="Waves-arrow-168"
=======
                        class="Waves-arrow-141"
>>>>>>> b66f944... Fix safari bugs on surveys
                        src="directioncircle.svg"
                        style="transform: rotate(360deg);"
                      />
                      <mock-typography
<<<<<<< HEAD
                        classname="Waves-contentTextValues-161"
=======
                        classname="Waves-contentTextValues-134"
>>>>>>> b66f944... Fix safari bugs on surveys
                        color="textSecondary"
                      >
                        180
                        °
                      </mock-typography>
                    </div>
                  </div>
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
    >
      <mock-charts
        dailydata="[object Object]"
        depth="4"
        maxmonthlymean="22"
        temperaturethreshold="23"
      />
    </div>
    <div
      class="MuiGrid-root Surveys-root-169 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root Surveys-surveyWrapper-170 MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-baseline MuiGrid-justify-xs-center MuiGrid-grid-xs-11 MuiGrid-grid-lg-6"
      >
        <mock-charts
          dailydata="[object Object]"
          depth="4"
          maxmonthlymean="22"
          temperaturethreshold="23"
        />
        <div
<<<<<<< HEAD
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
        >
          <mock-typography
            classname="Surveys-title-171"
          >
            Survey History
          </mock-typography>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
=======
          class="MuiGrid-root Surveys-root-142 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-center"
>>>>>>> b66f944... Fix safari bugs on surveys
        >
          <mock-box
            bgcolor="#f5f6f6"
            height="100%"
            position="absolute"
            width="100vw"
            zindex="-1"
          />
          <div
            class="MuiGrid-root Surveys-surveyWrapper-143 MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-11 MuiGrid-grid-lg-6"
          >
            <mock-typography
              classname="Surveys-subTitle-172"
              variant="h6"
            >
              <mock-typography
                classname="Surveys-title-144"
              >
                Survey History
              </mock-typography>
            </div>
            <div
              class="MuiFormControl-root Surveys-formControl-173"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-174 MuiInputBase-formControl MuiInput-formControl"
              >
<<<<<<< HEAD
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="survey-history survey-history"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="survey-history"
                  role="button"
                  tabindex="0"
                >
                  <mock-typography
                    classname="Surveys-menuItem-175"
                    variant="h6"
                  >
                    All
                  </mock-typography>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="survey-history"
                  tabindex="-1"
                  value="all"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
=======
                <mock-typography
                  classname="Surveys-subTitle-145"
                  variant="h6"
>>>>>>> b66f944... Fix safari bugs on surveys
                >
                  Survey History:
                </mock-typography>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiFormControl-root Surveys-formControl-146"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-147 MuiInputBase-formControl MuiInput-formControl"
                  >
                    <mock-typography
                      classname="Surveys-menuItem-175"
                      variant="h6"
                    >
                      <mock-typography
                        classname="Surveys-menuItem-148"
                        variant="h6"
                      >
                        All
                      </mock-typography>
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput"
                      name="survey-history"
                      tabindex="-1"
                      value="all"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSelect-icon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <mock-menu
                      anchorel="[object HTMLDivElement]"
                      id="menu-survey-history"
                      menulistprops="[object Object]"
                      open="false"
                      paperprops="[object Object]"
                    >
                      <mock-menuitem
                        aria-selected="true"
                        data-value="all"
                        role="option"
                        selected="true"
                      >
                        <mock-typography
                          classname="Surveys-menuItem-148"
                          variant="h6"
                        >
                          All
                        </mock-typography>
                      </mock-menuitem>
                    </mock-menu>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              classname="Surveys-subTitle-172"
              variant="h6"
            >
              Observation:
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiFormControl-root Surveys-formControl-173"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-174 MuiInputBase-formControl MuiInput-formControl"
              >
<<<<<<< HEAD
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="survey-observation survey-observation"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="survey-observation"
                  role="button"
                  tabindex="0"
                >
                  <mock-typography
                    classname="Surveys-menuItem-175"
                    variant="h6"
                  >
                    Any
                  </mock-typography>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="survey-observation"
                  tabindex="-1"
                  value="any"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
=======
                <mock-typography
                  classname="Surveys-subTitle-145"
                  variant="h6"
>>>>>>> b66f944... Fix safari bugs on surveys
                >
                  Observation:
                </mock-typography>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <div
                  class="MuiFormControl-root Surveys-formControl-146"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-147 MuiInputBase-formControl MuiInput-formControl"
                  >
                    <mock-typography
                      classname="Surveys-menuItem-175"
                      variant="h6"
                    >
                      <mock-typography
                        classname="Surveys-menuItem-148"
                        variant="h6"
                      >
                        Any
                      </mock-typography>
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput"
                      name="survey-observation"
                      tabindex="-1"
                      value="any"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSelect-icon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                    <mock-menu
                      anchorel="[object HTMLDivElement]"
                      id="menu-survey-observation"
                      menulistprops="[object Object]"
                      open="false"
                      paperprops="[object Object]"
                    >
                      <mock-menuitem
                        aria-selected="true"
                        data-value="any"
                        role="option"
                        selected="true"
                      >
                        <mock-typography
                          classname="Surveys-menuItem-148"
                          variant="h6"
                        >
                          Any
                        </mock-typography>
                      </mock-menuitem>
                    </mock-menu>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-11 MuiGrid-grid-lg-10"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
            />
          </div>
        </div>
      </mock-box>
    </mock-box>
  </div>
  <mock-appbar
<<<<<<< HEAD
    classname="Footer-appBar-186"
=======
    classname="Footer-appBar-104"
>>>>>>> b66f944... Fix safari bugs on surveys
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-typography
            variant="h4"
          >
            Aqua
          </mock-typography>
          <mock-typography
            style="color: rgb(138, 198, 222);"
            variant="h4"
          >
            link
          </mock-typography>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;

exports[`Reef Detail Page should render with given state from Redux store: snapshot-with-no-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-2"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-4"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-link
          href="/"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          HOME
        </mock-link>
        <mock-link
          href="/buoy"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          BUOY
        </mock-link>
        <mock-link
          href="/drones"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          DRONE
        </mock-link>
        <mock-link
          href="/about"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          ABOUT
        </mock-link>
        <mock-link
          href="/faq"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          FAQ
        </mock-link>
        <mock-link
          href="/apply"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          APPLY
        </mock-link>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-typography
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-8"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              SIGN IN
            </mock-button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              REGISTER
            </mock-button>
          </div>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-12"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="RegisterDialog-dialogHeaderSecondPart-14"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="RegisterDialog-closeButton-11"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent
        classname="RegisterDialog-contentWrapper-21"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root RegisterDialog-dialogContentTitle-15 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-form-16"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-17 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-17 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-17 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-17 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-around MuiGrid-grid-xs-11"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-22"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <mock-typography
                    classname="RegisterDialog-formText-19"
                    color="textSecondary"
                    variant="subtitle1"
                  >
                    I have read the
                     
                    <a
                      class="RegisterDialog-termsLink-23"
                      href="/"
                    >
                      Terms and Conditions
                    </a>
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-20 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  REGISTER NOW
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-formText-19"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-25"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    classname="SignInDialog-dialogHeaderSecondPart-26"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="SignInDialog-closeButton-24"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root SignInDialog-dialogContentTitle-27 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-form-28"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-29 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-31"
                  variant="subtitle2"
                >
                  or login with email address
                </mock-typography>
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-29 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  classname="SignInDialog-forgotPasswordButton-33"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-32 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-31"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    REGISTER
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="Reef-noData-1"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <mock-typography
            color="primary"
            gutterbottom="true"
            variant="h2"
          >
            No Data Found
          </mock-typography>
        </div>
      </div>
    </div>
  </div>
  <mock-appbar
    classname="Footer-appBar-26"
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-typography
            variant="h4"
          >
            Aqua
          </mock-typography>
          <mock-typography
            style="color: rgb(138, 198, 222);"
            variant="h4"
          >
            link
          </mock-typography>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;
